# VX-LOG

./: .gitignore  ChangeLog.txt  LICENSE  Makefile.am  Makefile.in  ReadMe.md  aclocal.m4  autogen.sh  config.status  configure  configure.in  libtool  macros.m4  nxlog.conf  version.sh
doc/reference-manual/config-examples/: Makefile.am  Makefile.in  apache_parse.conf  apache_url.conf  cisco_acs.conf  cisco_pix_asa.conf  common.conf  datetime.stmnt  define.conf  detect_no_logs.conf  drop.stmnt  evcorr2.conf  example-tester.sh  exec.conf  im_dbi_mysql.conf  im_exec.conf  im_file.conf  im_internal.conf  im_kernel.conf  im_mark.conf  im_ssl.conf  im_tcp.conf  im_udp.conf  im_uds.conf  inputtype.conf  lang_binop_and.stmnt  lang_binop_div.stmnt  lang_binop_equal.stmnt  lang_binop_ge.stmnt  lang_binop_greater.stmnt  lang_binop_in.stmnt  lang_binop_le.stmnt  lang_binop_less.stmnt  lang_binop_minus.stmnt  lang_binop_mod.stmnt  lang_binop_mul.stmnt  lang_binop_not_in.stmnt  lang_binop_notequal.stmnt  lang_binop_notregmatch.stmnt  lang_binop_or.stmnt  (+85 more)
doc/reference-manual/en/: Makefile.am  Makefile.in  apidoc-core.adoc  apidoc-im_file.adoc  apidoc-om_file.adoc  apidoc-om_http.adoc  apidoc-om_ssl.adoc  apidoc-om_tcp.adoc  apidoc-pm_blocker.adoc  apidoc-pm_buffer.adoc  apidoc-xm_charconv.adoc  apidoc-xm_csv.adoc  apidoc-xm_exec.adoc  apidoc-xm_fileop.adoc  apidoc-xm_json.adoc  apidoc-xm_kvp.adoc  apidoc-xm_multiline.adoc  apidoc-xm_perl.adoc  apidoc-xm_syslog.adoc  apidoc-xm_xml.adoc  apidoc.sh  attributes.adoc  configuration.adoc  fields-core.adoc  fields-im_internal.adoc  fields-im_mark.adoc  fields-im_ssl.adoc  fields-im_tcp.adoc  fields-im_udp.adoc  fields-pm_norepeat.adoc  fields-pm_pattern.adoc  fields-xm_syslog.adoc  fields.sh  language.adoc  man_nxlog-processor.adoc  man_nxlog.adoc  man_pages.adoc  modules.adoc  nxlog-reference-manual.adoc  nxlog-reference-manual.html
src/common/: Makefile.am  Makefile.in  alloc.c  alloc.h  atomic.h  backtrace.c  backtrace.h  cfgfile.h  config.h  config.h.in  config.h.in~  config_cache.c  config_cache.h  confparser.c  context.c  context.h  core-api.xml  core-fields.xml  date.c  date.h  dlist.h  error_debug.c  error_debug.h  event.c  event.h  exception.c  exception.h  expr-core-funcproc-cb.c  expr-core-funcproc.c  expr-core-funcproc.h  expr-grammar.c  expr-grammar.h  expr-grammar.y  expr-parser.c  expr-parser.h  expr-tokens.c  expr-tokens.l  expr.c  expr.h  logdata-serialize.c  (+25 more)
src/core/: Makefile.am  Makefile.in  core.c  core.h  ctx.c  ctx.h  job.h  main-unix.c  modules.c  modules.h  nxlog.c  nxlog.h  router.c  router.h
src/modules/extension/charconv/: Makefile.am  Makefile.in  charconv.c  charconv.h  expr-xm_charconv-funcproc.c  expr-xm_charconv-funcproc.h  xm_charconv-api.xml  xm_charconv.c  xm_charconv.h  xm_charconv_funcproc_cb.c
src/modules/extension/csv/: Makefile.am  Makefile.in  csv.c  csv.h  expr-xm_csv-funcproc.c  expr-xm_csv-funcproc.h  xm_csv-api.xml  xm_csv.c  xm_csv.h  xm_csv_funcproc_cb.c
src/modules/extension/exec/: Makefile.am  Makefile.in  expr-xm_exec-funcproc.c  expr-xm_exec-funcproc.h  xm_exec-api.xml  xm_exec.c  xm_exec.h  xm_exec_funcproc_cb.c
src/modules/extension/fileop/: Makefile.am  Makefile.in  expr-xm_fileop-funcproc.c  expr-xm_fileop-funcproc.h  xm_fileop-api.xml  xm_fileop.c  xm_fileop_funcproc_cb.c
src/modules/extension/gelf/: Makefile.am  Makefile.in  gelf.c  gelf.h  xm_gelf.c  xm_gelf.h
src/modules/extension/json/: Makefile.am  Makefile.in  expr-xm_json-funcproc.c  expr-xm_json-funcproc.h  json.c  json.h  xm_json-api.xml  xm_json.c  xm_json.h  xm_json_funcproc_cb.c
src/modules/extension/kvp/: Makefile.am  Makefile.in  expr-xm_kvp-funcproc.c  expr-xm_kvp-funcproc.h  kvp.c  kvp.h  xm_kvp-api.xml  xm_kvp.c  xm_kvp.h  xm_kvp_funcproc_cb.c
src/modules/extension/multiline/: Makefile.am  Makefile.in  xm_multiline.c  xm_multiline.h
src/modules/extension/syslog/: Makefile.am  Makefile.in  expr-xm_syslog-funcproc.c  expr-xm_syslog-funcproc.h  syslog.c  syslog.h  xm_syslog-api.xml  xm_syslog-fields.xml  xm_syslog.c  xm_syslog.h  xm_syslog_funcproc_cb.c
src/modules/extension/xml/: Makefile.am  Makefile.in  expr-xm_xml-funcproc.c  expr-xm_xml-funcproc.h  xm_xml-api.xml  xm_xml.c  xm_xml.h  xm_xml_funcproc_cb.c  xml.c  xml.h
src/modules/input/file/: Makefile.am  Makefile.in  expr-im_file-funcproc.c  expr-im_file-funcproc.h  im_file-api.xml  im_file.c  im_file.h  im_file_funcproc_cb.c
src/modules/output/file/: Makefile.am  Makefile.in  expr-om_file-funcproc.c  expr-om_file-funcproc.h  om_file-api.xml  om_file.c  om_file.h  om_file_funcproc_cb.c
src/modules/output/http/: Makefile.am  Makefile.in  (+6 more)
src/utils/: Makefile.am  Makefile.in  codegen.pl  processor.c  stmnt-verifier.c  stresstest.c  testinput.h
test/: Makefile.am  Makefile.in  common.conf  conf-tester.sh  conftest.txt  module-tester.sh  tester.pl
test/cert/: ca.pem  client-cert.pem  client-key.pem  server-cert.pem  server-key.pem
test/common/: Makefile.am  Makefile.in  alloc-test.c  configcache.c  date.c  expression-test.c  logdata-serialize.c  logdata.c  scheduler-test.c  stmnt-test.c  stmnt-test.sh  str-test.c  value-serialize.c  value-test.c
test/conf/FIXME/: badroutepath1.conf  badroutepath2.conf
test/conf/core/: badinputinroute.conf  badmoduledir.conf  badoutputinroute.conf  badpidfile.conf  badprocinroute.conf  badroutepath3.conf  badroutepath4.conf  badroutepath5.conf  badroutepath6.conf  badroutepath7.conf  emptyconf.conf  emptyinput.conf  emptyoutput.conf  emptyprocessor.conf  emptyroute.conf  invalidkeyword.conf  invalidmodule.conf  invalidroutekeyword.conf  modalreadydefined.conf  schedule_double_every.conf  schedule_double_first.conf  schedule_double_when.conf  schedule_empty.conf  schedule_every_when.conf  schedule_first_when.conf  schedule_invalid_every.conf  schedule_invalid_exec.conf  schedule_invalid_first.conf  schedule_invalid_when.conf  schedule_missing_exec.conf  schedule_when_every.conf  tagsdontmatch.conf
test/coresrc/: Makefile.am  Makefile.in  event.c  exception_test.c
test/modules/core/: test1.conf  test1.txt
(+553 files in other folders)
